tests/snapshots/yaml_suite_snapshots__yaml_suite_5NYZ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.9. Separated Comment
  from: "http://www.yaml.org/spec/1.2/spec.html#id2780342"
  tags: mapping spec comment
  yaml: "key:    # Comment\n  value\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :value\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"key\": \"value\"\n}\n"
  dump: "key: value\n"
