tests/snapshots/yaml_suite_snapshots__yaml_suite_5T43_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Colon at the beginning of adjacent flow scalar
  from: "@perlpunk"
  tags: flow mapping scalar
  yaml: "- { \"key\":value }\n- { \"key\"::value }\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP {}\n    =VAL \"key\n    =VAL :value\n   -MAP\n   +MAP {}\n    =VAL \"key\n    =VAL ::value\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"key\": \"value\"\n  },\n  {\n    \"key\": \":value\"\n  }\n]\n"
  dump: "- key: value\n- key: :value\n"
  emit: "- \"key\": value\n- \"key\": :value\n"
