tests/snapshots/yaml_suite_snapshots__yaml_suite_5TRB_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid document-start marker in doublequoted tring
  from: "@perlpunk"
  tags: header double error
  fail: true
  yaml: "---\n\"\n---\n\"\n"
  tree: "+STR\n +DOC ---\n"
