tests/snapshots/yaml_suite_snapshots__yaml_suite_5TRB_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid document-start marker in doublequoted tring
  tags: header double error
  tree: "+STR\n +DOC ---\n"
  yaml: "---\n\"\n---\n\"\n"
