tests/snapshots/yaml_suite_snapshots__yaml_suite_5TYM_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "http://www.yaml.org/spec/1.2/spec.html#id2783499"
  json: "\"fluorescent\"\n\"green\"\n"
  name: Spec Example 6.21. Local Tag Prefix
  tags: local-tag spec directive tag
  tree: "+STR\n +DOC ---\n  =VAL <!my-light> :fluorescent\n -DOC ...\n +DOC ---\n  =VAL <!my-light> :green\n -DOC\n-STR\n"
  yaml: "%TAG !m! !my-\n--- # Bulb here\n!m!light fluorescent\n...\n%TAG !m! !my-\n--- # Color here\n!m!light green\n"
